--- a/demo1.html
+++ b/demo1.html
@@ -26,6 +26,11 @@
             --bg-color: #131617;
         }
         
+        [data-theme="light"] {
+            --nav-color: #fff;
+            --bg-color: #131617;
+        }
+        
         .theme-switch {
             display: inline-block;
             cursor: pointer;
