--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         
         a {
             transition: 0.3s;
-            color: #696969;
+            color: #3f3a64;
         }
         
         a:hover {
