--- a/demo2.html
+++ b/demo2.html
@@ -18,7 +18,7 @@
         }
         
         [data-theme="light"] {
-            --nav-color: #ffffff;
+            --nav-color: #fff;
         }
         
         .theme-switch {
