--- a/index.html
+++ b/index.html
@@ -117,6 +117,22 @@
         .heibai:hover {
             background: gray;
         }
+        
+        .html1 {
+            float: left;
+            border: 3px solid #fafafa;
+            border-radius: 10px;
+            background: pink;
+            transition: 0.3s;
+            line-height: 26px;
+            width: 20%;
+            position: relative;
+            right: 253px;
+        }
+        
+        .html1:hover {
+            background: gray;
+        }
     </style>
 </head>
 
@@ -941,6 +957,14 @@
             </li>
         </ul>
         <div class="clear"></div>
+    </div>
+    <div class="html1">
+        <h1>学习html标签2</h1>
+        <ul>
+            <li>
+                <a href="./html2/html标签/1.html">html视频播放</a>
+            </li>
+        </ul>
     </div>
 </body>
 
