--- a/html3/2.html
+++ b/html3/2.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <img src="../图片/eg_merglobe.gif">
-
-    <img src="	file:///Users/wangyufei/Desktop/%E5%B7%A5%E4%BD%9C/HTML+CSS%E7%A4%BA%E4%BE%8B/%E5%9B%BE%E7%89%87/eg_merglobe.gif">
+    <img src=" file:///Users/wangyufei/Desktop/%E5%B7%A5%E4%BD%9C/HTML+CSS%E7%A4%BA%E4%BE%8B/%E5%9B%BE%E7%89%87/eg_merglobe.gif" alt="这是一个星球" 。 " width="200 " height="171 ">
 </body>
 
 </html>
