--- a/index.html
+++ b/index.html
@@ -833,6 +833,20 @@
         </ul>
         <div class="clear"></div>
     </div>
+    <div class="html3">
+        <h3>复习html</h3>
+        <ul>
+            <li>
+                <a href="./html3/1.html">关于图片引入</a>
+            </li>
+            <li>
+                <a href="./html3/2.html">关于另一种图片链接的方法</a>
+            </li>
+            <li>
+                <a href="./html3/3.html">关于视屏链接</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
