--- a/index.html
+++ b/index.html
@@ -775,6 +775,7 @@
                 <a href="./html3/3.html">关于视屏链接</a>
             </li>
         </ul>
+        <div class="clear"></div>
     </div>
     <div class="flex">
         <h1>学习flex</h1>
