--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>王某人的个人练习</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./图片/线性用户个人我的我.png">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 </head>
 
 <body>
@@ -847,7 +847,8 @@
             </li>
         </ul>
         <div class="clear"></div>
-    </div>
+    </div>、
+
 </body>
 
 </html>
