--- a/index.html
+++ b/index.html
@@ -774,6 +774,18 @@
             <li>
                 <a href="./html3/3.html">关于视屏链接</a>
             </li>
+            <li>
+                <a href="./html3/4.html">输入文本框</a>
+            </li>
+            <li>
+                <a href="./html3/5.html">文本框内颜色的选择</a>
+            </li>
+            <li>
+                <a href="./html3/6.html">选择日期</a>
+            </li>
+            <li>
+                <a href="./html3/7.html">选择聚会日期时间</a>
+            </li>
         </ul>
         <div class="clear"></div>
     </div>
