--- a/index.html
+++ b/index.html
@@ -784,7 +784,10 @@
                 <a href="./html3/6.html">选择日期</a>
             </li>
             <li>
-                <a href="./html3/7.html">选择聚会日期时间</a>
+                <a href="./html3/7.html">日期选择器示例（兼容版</a>
+            </li>
+            <li>
+                <a href="./html3/8.html">本地日期时间选择器示例（兼容版）</a>
             </li>
         </ul>
         <div class="clear"></div>
