--- a/index.html
+++ b/index.html
@@ -789,6 +789,9 @@
             <li>
                 <a href="./html3/8.html">本地日期时间选择器示例（兼容版）</a>
             </li>
+            <li>
+                <a href="./html3/8.html">可编辑表格</a>
+            </li>
         </ul>
         <div class="clear"></div>
     </div>
