--- a/index.html
+++ b/index.html
@@ -792,6 +792,12 @@
             <li>
                 <a href="./html3/8.html">可编辑表格</a>
             </li>
+            <li>
+                <a href="./html3/8.html">可编辑表格</a>
+            </li>
+            <li>
+                <a href="./html3/9.html">可编辑表格之2</a>
+            </li>
         </ul>
         <div class="clear"></div>
     </div>
