首页导航栏

--- a/index.html
+++ b/index.html
@@ -798,6 +798,9 @@
             <li>
                 <a href="./html3/9.html">可编辑表格之2</a>
             </li>
+            <li>
+                <a href="./html3/10.html">首页导航栏</a>
+            </li>
         </ul>
         <div class="clear"></div>
     </div>
