--- a/index.html
+++ b/index.html
@@ -801,6 +801,9 @@
             <li>
                 <a href="./html3/10.html">首页导航栏</a>
             </li>
+            <li>
+                <a href="./html3/11.html">表格</a>
+            </li>
         </ul>
         <div class="clear"></div>
     </div>
