--- a/index.html
+++ b/index.html
@@ -804,6 +804,9 @@
             <li>
                 <a href="./html3/11.html">表格</a>
             </li>
+            <li>
+                <a href="./html3/12.html">表格加粗</a>
+            </li>
         </ul>
         <div class="clear"></div>
     </div>
