--- a/index.html
+++ b/index.html
@@ -860,7 +860,25 @@
             </ul>
             <div class="clear"></div>
         </div>
-
+        <div class="heibai">
+            <h2>黑白切换</h2>
+            <ul>
+                <li>
+                    <a href="./demo1.html">黑白模式切换1</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="./demo2.html">黑白模式切换2</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="./demo5.html">黑白模式切换模板</a>
+                </li>
+            </ul>
+            <div class="clear"></div>
+        </div>
     </div>
 </body>
 
