--- a/index.html
+++ b/index.html
@@ -814,6 +814,9 @@
                 <li>
                     <a href="./html3/14.html">表格中的空单元格</a>
                 </li>
+                <li>
+                    <a href="./html3/14.html">横跨两列的单元格</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
