--- a/index.html
+++ b/index.html
@@ -817,6 +817,12 @@
                 <li>
                     <a href="./html3/14.html">横跨两列的单元格</a>
                 </li>
+                <li>
+                    <a href="./html3/14.html">单元格边距(Cell padding)</a>
+                </li>
+                <li>
+                    <a href="./html3/14.html">单元格间距(Cell spacing)</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
