--- a/index.html
+++ b/index.html
@@ -770,58 +770,55 @@
                     <a href="./html3/1.html">关于图片引入</a>
                 </li>
                 <li>
-                    <a href="./html3/2.html">关于另一种图片链接的方法</a>
+                    <a href="./html3/2.html">关于图片引入</a>
                 </li>
                 <li>
-                    <a href="./html3/3.html">关于视屏链接</a>
+                    <a href="./html3/3.html">关于视频引入</a>
                 </li>
                 <li>
-                    <a href="./html3/4.html">输入文本框</a>
+                    <a href="./html3/4.html">关于input输入</a>
                 </li>
                 <li>
-                    <a href="./html3/5.html">文本框内颜色的选择</a>
+                    <a href="./html3/5.html">关于颜色选择器</a>
                 </li>
                 <li>
-                    <a href="./html3/6.html">选择日期</a>
+                    <a href="./html3/6.html">关于输入生日以及日期</a>
                 </li>
                 <li>
-                    <a href="./html3/7.html">日期选择器示例（兼容版</a>
+                    <a href="./html3/7.html">关于输入生日以及日期</a>
                 </li>
                 <li>
-                    <a href="./html3/8.html">本地日期时间选择器示例（兼容版）</a>
+                    <a href="./html3/8.html">关于输入生日以及日期2</a>
                 </li>
                 <li>
-                    <a href="./html3/8.html">可编辑表格</a>
+                    <a href="./html3/9.html">关于文本框内输入</a>
                 </li>
                 <li>
-                    <a href="./html3/8.html">可编辑表格</a>
-                </li>
-                <li>
-                    <a href="./html3/9.html">可编辑表格之2</a>
-                </li>
-                <li>
-                    <a href="./html3/10.html">首页导航栏</a>
+                    <a href="./html3/10.html">主页</a>
                 </li>
                 <li>
                     <a href="./html3/11.html">表格</a>
                 </li>
                 <li>
-                    <a href="./html3/12.html">表格加粗</a>
+                    <a href="./html3/12.html">表格边框</a>
                 </li>
                 <li>
-                    <a href="./html3/13.html">表格加表头</a>
+                    <a href="./html3/13.html">表格的表头</a>
                 </li>
                 <li>
                     <a href="./html3/14.html">表格中的空单元格</a>
                 </li>
                 <li>
-                    <a href="./html3/14.html">横跨两列的单元格</a>
+                    <a href="./html3/15.html">跨行或跨列的表格单元格</a>
                 </li>
                 <li>
-                    <a href="./html3/14.html">单元格边距(Cell padding)</a>
+                    <a href="./html3/16.html">表格内的标签</a>
                 </li>
                 <li>
-                    <a href="./html3/15.html">单元格间距(Cell spacing)</a>
+                    <a href="./html3/17.html">单元格边距(Cell padding)</a>
+                </li>
+                <li>
+                    <a href="./html3/18.html">单元格间距(Cell spacing)</a>
                 </li>
             </ul>
             <div class="clear"></div>
