向表格添加背景颜色或背景图像

--- a/html3/19.html
+++ b/html3/19.html
@@ -22,7 +22,7 @@
     </table>
 
     <h4>背景图像：</h4>
-    <table border="1" background="/i/eg_bg_07.gif">
+    <table border="1" style="background-image: url(./图片/eg_bg_07.gif);">
         <tr>
             <td>First</td>
             <td>Row</td>
