--- a/index.html
+++ b/index.html
@@ -820,6 +820,12 @@
                 <li>
                     <a href="./html3/18.html">单元格间距(Cell spacing)</a>
                 </li>
+                <li>
+                    <a href="./html3/19.html">向表格添加背景颜色或背景图像</a>
+                </li>
+                <li>
+                    <a href="./html3/20.html">向表格单元添加背景颜色或者背景图像</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
