--- a/html3/20.html
+++ b/html3/20.html
@@ -16,7 +16,7 @@
             <td>Row</td>
         </tr>
         <tr>
-            <td background="/i/eg_bg_07.gif">
+            <td style="background-image: url(./图片/eg_bg_07.gif);">
                 Second</td>
             <td>Row</td>
         </tr>
