在表格单元中排列内容

--- a/index.html
+++ b/index.html
@@ -826,6 +826,9 @@
                 <li>
                     <a href="./html3/20.html">向表格单元添加背景颜色或者背景图像</a>
                 </li>
+                <li>
+                    <a href="./html3/21.html">在表格单元中排列内容</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
