--- a/index.html
+++ b/index.html
@@ -829,6 +829,9 @@
                 <li>
                     <a href="./html3/21.html">在表格单元中排列内容</a>
                 </li>
+                <li>
+                    <a href="./html3/22.html">id属性</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
