--- a/index.html
+++ b/index.html
@@ -832,6 +832,12 @@
                 <li>
                     <a href="./html3/22.html">id属性</a>
                 </li>
+                <li>
+                    <a href="./html3/23.html">Class 与 ID 的差异</a>
+                </li>
+                <li>
+                    <a href="./html3/24.html">通过 ID 和链接实现 HTML 书签</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
