--- a/index.html
+++ b/index.html
@@ -838,6 +838,9 @@
                 <li>
                     <a href="./html3/24.html">通过 ID 和链接实现 HTML 书签</a>
                 </li>
+                <li>
+                    <a href="./html3/25.html">JavaScript 中使用 id 属性</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
