--- a/index.html
+++ b/index.html
@@ -841,6 +841,9 @@
                 <li>
                     <a href="./html3/25.html">JavaScript 中使用 id 属性</a>
                 </li>
+                <li>
+                    <a href="./html3/25.html">关于音频的链接</a>
+                </li>
             </ul>
             <div class="clear"></div>
         </div>
