--- a/index.html
+++ b/index.html
@@ -842,7 +842,10 @@
                     <a href="./html3/25.html">JavaScript 中使用 id 属性</a>
                 </li>
                 <li>
-                    <a href="./html3/25.html">关于音频的链接</a>
+                    <a href="./html3/26.html">关于音频的链接</a>
+                </li>
+                <li>
+                    <a href="./html3/27.html">关于视频的链接</a>
                 </li>
             </ul>
             <div class="clear"></div>
